# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.209 2005/04/06 23:23:57 rocket Exp $

  06 Apr 2005; Eric Edgar <rocket@gentoo.org>
  targets/livecd-stage1/livecd-stage1-controller.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/stage1/stage1-preclean-chroot.sh, targets/support/functions.sh,
  targets/support/gamecdfs-update.sh, targets/support/livecdfs-update.sh,
  targets/support/pre-kmerge.sh:
  change the code to use more case statements. Fix gcc issue in stage1.

  06 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage1/livecd-stage1-controller.sh,
  targets/support/gamecdfs-update.sh, targets/support/livecdfs-update.sh:
  Merging in changes from catalyst 1.1.x for gamecd support.

  06 Apr 2005; Eric Edgar <rocket@gentoo.org>
  targets/stage1/stage1-preclean-chroot.sh:
  Removing gcc-config stuff to see if its still required to work around a gcc
  bug

  06 Apr 2005; Eric Edgar <rocket@gentoo.org>
  targets/support/chroot-functions.sh, targets/support/kmerge.sh:
  Added tests for genkernel >3.2.0

  05 Apr 2005; Eric Edgar <rocket@gentoo.org> catalyst:
  Fixed email address

  05 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS:
  Updated AUTHORS with new maintainers and updated contributors list.

  05 Apr 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  examples/fsscript.sh.example, livecd/files/README.txt,
  livecd/files/livecd-bash_profile, livecd/files/livecd-bashrc,
  livecd/files/minimal.motd.txt, livecd/files/universal.motd.txt,
  targets/support/gamecdfs-update.sh, targets/support/livecdfs-update.sh:
  Changed maintainers. Updated examples/fsscript.sh.example to provide better
  documentation. Lots of minor cosmetic updates. Updated minimal.motd.txt and
  universal.motd.txt to resolve documentation issue on bug #86914. Added